--- a/assets/css/flexbox.css
+++ b/assets/css/flexbox.css
@@ -20,12 +20,19 @@
     align-items: center;
 }
 
+.flex-inline {
+    display: inline-flex;
+    align-items: center;
+}
+
 .flex-direction-column {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .flex-wrap {
     display: flex;
     flex-wrap: wrap;
 }
+
