Done all du an , ket thuc

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -924,9 +924,11 @@ header nav ul a:hover {
 }
 
 @media screen and (max-width: 320px) {
+    /* Countdown */
     .countdown .countdown-list {
         gap: 1rem;
     }
+    /* testimonials */
 
     .testimonials {
         margin-top: 32rem;
